# rozetka_api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HISTORY.md  HISTORY.rst  README.md  README.rst  crontab  deploy.cmd  entrypoint.sh  poetry_publish.cmd  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-image.yml  manual.yml  pypi-test.yml  pypi.yml
rozetka/: README.rst  __init__.py  __main__.py  db.py  tools.py
rozetka/entities/: category.py  cell.py  grid.py  item.py  page.py  point.py  supercategory.py
rozetka/runners/: parse_api.py  parse_webpages.py
rozetka/tests/: test_suite.py
rozetka/tools/: config.py  constants.py  db.py  tools.py
script/: deploy.cmd  deploy_remote.cmd  poetry_publish.cmd
src/rozetka/entities/: category.py  item.py  point.py  supercategory.py
src/rozetka/runners/: parse_api.py
src/rozetka/tools/: constants.py  db.py  tools.py
tests/: test_suite.py
