[project]
name = "rozetka"
version = "1.6.6"
description = "Rozetka Python API"
authors = [
    { name = "Alexey ALERT Rubasheff", email = "alexey.rubasheff@gmail.com" }
]
readme = "README.md"
requires-python = "==3.12.*"
keywords = ["rozetka"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "pendulum>=3.0.0",
    "requests>=2.32.3",
    "aiohttp-retry>=2.8.3",
    "global-logger>=0.4.2",
    "progress>=1.6",
    "ratelimit>=2.2.1",
    "python-worker>=2.2.4",
    "knockknock>=0.1.8.1",
    "influxdb-client[async]>=1.46.0",
    "curl-cffi>=0.10.0b1",
]
packages = ["rozetka"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
homepage = "https://github.com/ALERTua/rozetka_api"
repository = "https://github.com/ALERTua/rozetka_api"
documentation = "https://github.com/ALERTua/rozetka_api"
"Bug Tracker" = "https://github.com/ALERTua/rozetka_api/issues"
"Rozetka API" = "https://github.com/ALERTua/rozetka_api"
"Rozetka Keepa" = "https://github.com/ALERTua/rozetka_keepa"
"Rozetka FastAPI" = "https://github.com/ALERTua/rozetka_fastapi"
"Rozetka UserScript" = "https://github.com/ALERTua/rozetka_userscript"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
