[project]
name = "rozetka-api"
version = "1.7.1"
description = "Rozetka Python API"
authors = [
    { name = "Alexey ALERT Rubasheff", email = "alexey.rubasheff@gmail.com" }
]
readme = "README.md"
requires-python = "==3.13.*"
keywords = ["rozetka"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "aiohttp-retry>=2.8.3",
    "global-logger>=0.4.5",
    "progress>=1.6",
    "ratelimit>=2.2.1",
    "python-worker>=2.2.4",
    "knockknock>=0.1.8.1",
    "influxdb-client[async]>=1.49.0",
    "curl-cffi>=0.11.3",
    "tzdata>=2025.2",
]

[tool.uv]
prerelease = "allow"

[project.urls]
homepage = "https://github.com/ALERTua/rozetka_api"
repository = "https://github.com/ALERTua/rozetka_api"
documentation = "https://github.com/ALERTua/rozetka_api"
"Bug Tracker" = "https://github.com/ALERTua/rozetka_api/issues"
"Rozetka API" = "https://github.com/ALERTua/rozetka_api"
"Rozetka Keepa" = "https://github.com/ALERTua/rozetka_keepa"
"Rozetka FastAPI" = "https://github.com/ALERTua/rozetka_fastapi"
"Rozetka UserScript" = "https://github.com/ALERTua/rozetka_userscript"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rozetka"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
max-line-length = 120
