[project]
name = "rozetka-api"
version = "1.7.1"
description = "Rozetka Python API"
authors = [
    { name = "Alexey ALERT Rubasheff", email = "alexey.rubasheff@gmail.com" }
]
readme = "README.md"
requires-python = "==3.13.*"
keywords = ["rozetka"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "aiohttp-retry>=2.8.3",
    "global-logger>=0.4.5",
    "progress>=1.6.1",
    "ratelimit>=2.2.1",
    "python-worker>=2.2.4",
    "knockknock>=0.1.8.1",
    "influxdb-client[async]>=1.49.0",
    "curl-cffi>=0.13.0",
    "tzdata>=2025.2",
]

[tool.uv]
prerelease = "allow"

[project.urls]
homepage = "https://github.com/ALERTua/rozetka_api"
repository = "https://github.com/ALERTua/rozetka_api"
documentation = "https://github.com/ALERTua/rozetka_api"
"Bug Tracker" = "https://github.com/ALERTua/rozetka_api/issues"
"Rozetka API" = "https://github.com/ALERTua/rozetka_api"
"Rozetka Keepa" = "https://github.com/ALERTua/rozetka_keepa"
"Rozetka FastAPI" = "https://github.com/ALERTua/rozetka_fastapi"
"Rozetka UserScript" = "https://github.com/ALERTua/rozetka_userscript"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "rozetka"
module-root = ""

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
max-line-length = 120
